js admin article edit fix. Decode html entities book title show.

--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -36,11 +36,10 @@
 
 
   <script type="text/javascript">
-    $(document).ready(function(){
-
-      $('.wysihtml5').each(function(i, elem) {
+  window.onload = function() {
+    $('.wysihtml5').each(function(i, elem) {
         $(elem).wysihtml5();
       });
-
-    })
+  
+  };
   </script>
