--- a/app/views/admin/lists/new.html.erb
+++ b/app/views/admin/lists/new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @list, url: @url do |f| %>
+<%= form_for @list, url: @url do |f| %>
   
   <div class="form-group">
     <label>Title</label>
@@ -54,7 +54,7 @@
 
 
 <script type="text/javascript">
-  $( function() {
+  window.onload = function() {
     function append_book( item ) {
       html = "<input type='hidden' name='list[books_ids][]' value='"+item.id+"'>";
       html += item.value; 
@@ -74,7 +74,7 @@
     $(document).on('click', '.books_pool .btn-danger' ,function(){
       $(this).parent().remove();
     });
-  });
+  };
 
 </script>
 
