--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,7 @@
               <li><a href="/authors">Автори</a></li>
               <li><a href="/lists">Підбірки</a></li>
               <li><a href="/articles">Статті</a></li>
+              <li><a href="/formats">Формати</a></li>
           </ul>          
         </div>
       </div>
