seo text for formats page

--- a/app/views/formats/show.html.erb
+++ b/app/views/formats/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= params[:key] %></h2>
 <p>
-  Тут зібрано всі доступні книги в <%= params[:key] %> форматі. Більшість можна скачати безкоштовно.
+  Тут зібрано всі доступні книги в <%= params[:key] %> форматі. Більшість можна скачати безкоштовно на комп'ютер, планшет або телефон. Файли книжок можна читати на смартфоні (айфон, андроїд та інші) за допомогою різноманітних програм, вже встановлених виробником Вашого пристрою. Також існує багато додатків доступних для завантаження бесплатно. 
 </p>
 
 <%= render partial: "books/list", collection: @items, as: :item  %>
