seo text book show

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -75,7 +75,7 @@
 
   <div class="bottom_description">
     <p>
-      В бібліотеці зібрані всі книги українською мовою в електронному (txt, rtf, doc, pdf, fb2, epub, mobi, djvu) та паперовому форматі. Книжку можна безкоштовно скачати клікнувши на необхідний Вам формат або купити паперовий варіант тексту з доставкою по Україні. Сайт бібліотеки оптимізований для роботи на смартфонах і планшетах. Потрібну книгу Ви можете легко знайти за допомогою пошуку.
+      В бібліотеці зібрані всі книги українською мовою в електронному (txt, rtf, doc, pdf, fb2, epub, mobi, djvu) та паперовому форматі. Книжку можна безкоштовно скачати клікнувши на необхідний Вам формат або купити паперовий варіант тексту з доставкою по Україні. Сайт бібліотеки оптимізований для роботи на телефонах, смартфонах(айфон, анроїд) і планшетах. Потрібну книгу Ви можете легко знайти за допомогою пошуку.
     </p>
   </div>
 </div>
