--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <h2 class="section_title">Помилка!</h2>
+  <p style="text=alicn:center">Спробуйте оновити сторінку.</p>
 </div> 
 <%= render partial: "layouts/book_search_form" %>
 
