--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,7 @@
 <h2><%= @tag.uk %></h2>
 <%= render partial: "books/list", collection: @items, as: :item  %>
 <%= render partial: "layouts/paginator" %>
+<p>
+  Тут зібрано всі доступні книги на тему <%= @tag.uk %>, в електронному (txt, rtf, doc, pdf, fb2, epub, mobi, djvu) та паперовому форматі. Більшість можна скачати безкоштовно на комп'ютер, планшет, телефон або замовити з доставкою по Україні. Файли книжок можна читати на смартфоні (айфон, андроїд та інші) за допомогою різноманітних програм, вже встановлених виробником Вашого пристрою. Також існує багато додатків доступних для завантаження бесплатно. 
+</p>
 <% content_for(:title, "#{@tag.uk}. Тег. Книги") %> 
