fake-brick.png https

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -230,7 +230,7 @@ a:hover{
         height: 100%;
         padding-top:20%;
         text-align:center;
-        background: url('http://findbook.in.ua/assets/images/fake-brick.png') repeat 0% 0%;
+        background: url('https://findbook.in.ua/assets/images/fake-brick.png') repeat 0% 0%;
     }
 }
 .list_href:hover{
