--- a/app/views/articles/_item.html.erb
+++ b/app/views/articles/_item.html.erb
@@ -1,7 +1,7 @@
 <a href="/articles/<%= item.seo %>" class="article_href col-centered col-md-10 col-xs-10 col-sm-10">
  
   <div class="col-md-4 col-sm-4">
-    <img src="<%= item.thumb %>" alt="<%= item.title %>" title="<%= item.title %>" />
+    <img src="https://d15rt5giy0bfyx.cloudfront.net<%= item.thumb %>" alt="<%= item.title %>" title="<%= item.title %>" />
   </div>
   <div class="col-md-8 col-sm-8">
     <div class="href_content">
