--- a/app/views/lists/_item.html.erb
+++ b/app/views/lists/_item.html.erb
@@ -1,4 +1,4 @@
 <a href="/lists/<%= list.seo %>" class="list_href col-centered col-xs-10">
-  <img src="<%= list.thumb %>" alt="<%= list.title %>" title="<%= list.title %>" />
+  <img src="https://d15rt5giy0bfyx.cloudfront.net<%= list.thumb %>" alt="<%= list.title %>" title="<%= list.title %>" />
   <div><%= list.title %></div>
 </a>
