--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,7 +2,7 @@
 <h2><%= @list.title %></h2>
 <div>
   <% if false && @list.cover %>
-    <img src="<%= @list.thumb %>" alt="<%= @list.title %>" title="<%= @list.title %>" />
+    <img src="https://d15rt5giy0bfyx.cloudfront.net<%= @list.thumb %>" alt="<%= @list.title %>" title="<%= @list.title %>" />
   <% end %>
   <%= @list.description %>
 </div>
@@ -15,6 +15,6 @@
 <% content_for(:description, "#{@list.description}") %> 
 <% content_for :meta do %>
 <meta content='<%= @list.description %>' property='og:description'>
-<meta content='<%= @list.thumb %>' property='og:image'>
+<meta content='https://d15rt5giy0bfyx.cloudfront.net<%= @list.thumb %>' property='og:image'>
 <meta content='website' property='og:type'>
 <% end %>
