--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,7 +16,7 @@
 <% content_for :meta do %>
 <meta content='<%= @article.title %>' property='og:title'>
 <meta content='<%= @article.description %>' property='og:description'>
-<meta content='<%= @article.poster %>' property='og:image'>
+<meta content='https://d15rt5giy0bfyx.cloudfront.net<%= @article.poster %>' property='og:image'>
 <meta content='website' property='og:type'>
 <meta content='article' property='og:type'>
 <% end %>
