--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,7 +68,7 @@ a:hover{
 .book_item{
     padding-left:40px;
     margin-bottom:20px;
-    background: url('https://findbook.in.ua/assets/images/closed_book.png') no-repeat 0% 50%;
+    background: url('https://d15rt5giy0bfyx.cloudfront.net/assets/images/closed_book.png') no-repeat 0% 50%;
 
     .label{
         opacity:0.7;
@@ -79,7 +79,7 @@ a:hover{
     }
 }
 .book_item:hover{
-    background: url('https://findbook.in.ua/assets/images/open-book.jpg') no-repeat 0% 50%;
+    background: url('https://d15rt5giy0bfyx.cloudfront.net/assets/images/open-book.jpg') no-repeat 0% 50%;
 }
 .book_cover{
     max-width: 150px;
@@ -230,7 +230,7 @@ a:hover{
         height: 100%;
         padding-top:20%;
         text-align:center;
-        background: url('https://findbook.in.ua/assets/images/fake-brick.png') repeat 0% 0%;
+        background: url('https://d15rt5giy0bfyx.cloudfront.net/assets/images/fake-brick.png') repeat 0% 0%;
     }
 }
 .list_href:hover{
