--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,6 +88,7 @@
         </div>
     </footer>
 
+    <%= stylesheet_link_tag "//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" %>
     <%= stylesheet_link_tag "application", :media => "all" %>
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700,800,900&amp;subset=cyrillic-ext" rel="stylesheet" async>
     <%= javascript_include_tag "application" %>
