--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,6 +92,7 @@ a:hover{
     font-size: 18px;
 
     h1{
+        font-family: 'Fira Sans', sans-serif;
         font-size: 19px;
         font-weight: 900;
         margin:0;
