--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,11 +53,11 @@
           <ul class="nav navbar-nav">
               <li><a href="/">Пошук</a></li>
               <li><a href="/genres">Жанри</a></li>
-              <!-- <li><a href="/tags">Теги</a></li> -->
               <li><a href="/authors">Автори</a></li>
               <li><a href="/lists">Підбірки</a></li>
               <li><a href="/articles">Статті</a></li>
               <li><a href="/formats">Формати</a></li>
+              <li><a href="/tags">Теги</a></li>
           </ul>          
         </div>
       </div>
