--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -43,9 +43,8 @@
     <h3 class="section_title">читайте також:</h2>
     
     <% @read_also.each do |book|%>
-    <a href="/books/<%= book.seo %>" class="col-md-2 col-xs-4 book_panel_link read_also">
-      <img src="<%= book.thumb %>" alt="<%= book.title %>" title="<%= book.title %>" />
-      <!-- <%= book.title %> -->
+    <a href="/books/<%= book['seo'] %>" class="col-md-2 col-xs-4 book_panel_link read_also">
+      <img src="<%= Book.thumb(book) %>" alt="<%= book['title'] %>" title="<%= book['title'] %>" />
     </a>
     <% end %>
   </div>
