--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -2,5 +2,6 @@
 <h2>admin</h2>
 <a href="/admin/articles">Blog</a><br/>
 <a href="/admin/lists">Lists</a><br/>
-<a href="/admin/books">Books</a>
+<a href="/admin/books">Books</a><br/>
+<a href="/admin/quotes">Quotes</a>
 
