--- a/app/views/quotes/_item.html.erb
+++ b/app/views/quotes/_item.html.erb
@@ -1,4 +1,4 @@
-<div class="quote_href col-centered col-xs-10">
+<div class="quote_href col-centered">
   <div class='q_text'><%= quote.text %></div>
   <% if quote.book%>
     <div class="q_book">
