--- a/app/views/quotes/_item.html.erb
+++ b/app/views/quotes/_item.html.erb
@@ -8,13 +8,20 @@
         </a>
       <% end %>
         <a href="/books/<%= quote.book.seo %>"><%= quote.book.title %></a><br/>
-        <%= quote.book.author_title %><br/> 
+        <%= quote.book.author_title %> 
+        <% unless defined?(hide_comment_button) && hide_comment_button %>
+        <a href="/quotes/<%= quote.id %>" class='q_href'>[коментувати]</a>
+        <% end %>
       <div class="clearfix"></div>
     </div>
   <% else %>
     <div class="q_book">
       <%== "#{quote.book_name}<br/>" if quote.book_name.present? %>
-      <%== "#{quote.author_name}<br/>" if quote.author_name? %>
+      <%== "#{quote.author_name}" if quote.author_name? %>
+      <% unless defined?(hide_comment_button) && hide_comment_button %>
+      <a href="/quotes/<%= quote.id %>" class='q_href'>[коментувати]</a>
+      <% end %>
+      <div class="clearfix"></div>
     </div>
   <% end %>
 </div>
