--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -24,6 +24,8 @@ s.setAttribute('data-timestamp', +new Date());
 </script>    
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
+<hr/>
+<%= render partial: "layouts/book_search_form" %>
 
 <% content_for(:title, 'Цитати з книг українською') %>
 <% content_for(:description, 'Цитати з книг українською мовою з посиланнями на джерела.') %>
