--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,7 @@
               <li><a href="/articles">Статті</a></li>
               <li><a href="/formats">Формати</a></li>
               <li><a href="/tags">Теги</a></li>
+              <li><a href="/quotes">Цитати</a></li>
           </ul>          
         </div>
       </div>
