--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     <%= favicon_link_tag 'apple-touch-icon-114x114.png', :rel => 'apple-touch-icon', :type => 'image/png', :sizes => '114x114' %>
     <%= favicon_link_tag 'apple-touch-icon-72x72.png', :rel => 'apple-touch-icon', :type => 'image/png', :sizes => '72x72' %>
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+    <meta name="theme-color" content="#a57d5a">
     
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
