--- a/app/views/admin/books/new.html.erb
+++ b/app/views/admin/books/new.html.erb
@@ -13,6 +13,11 @@
     <label>Cover</label>
     <%= f.text_field :cover, class: "form-control", required: true %>
   </div>
+
+  <div class="form-group">
+    <label>Hide</label>
+    <%= f.check_box :hide %>
+  </div>
   
   <hr/>
 
