--- a/app/views/quotes/_item.html.erb
+++ b/app/views/quotes/_item.html.erb
@@ -1,5 +1,5 @@
 <div class="quote_href col-centered">
-  <div class='q_text'><%= quote.text %></div>
+  <div class='q_text'><%= quote.text.gsub("\n", '<br/>') %></div>
   <% if quote.book%>
     <div class="q_book">
       <% if quote.book['cover'].present? %>
