extended search routes

--- a/app/views/extended_search/new.html.erb
+++ b/app/views/extended_search/new.html.erb
@@ -5,8 +5,7 @@
 <div class="container">
     <div class="row book_search_form">
           <h2>розширений пошук книг</h2>
-            <form action="/extended_search_results" method="get">
-        
+            <form action="<%= extended_search_path(id: :results) %>" method="get">
 
         <div class="row ">
             <div class="col-xs-6 col-sm-4">
