--- a/app/views/layouts/_book_search_form.html.erb
+++ b/app/views/layouts/_book_search_form.html.erb
@@ -14,7 +14,7 @@
 
             <div class="clearfix"></div>
 
-            <a class="pull-right" href="/extended_search"><small>розширений пошук</small></a>
+            <a class="pull-right" href="<%= new_extended_search_path %>"><small>розширений пошук</small></a>
             <div class="clearfix"></div>
 
       </form>
