--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -7,7 +7,7 @@
       <% end %>
     <% end %>
 
-    <% $book_formats.each do |frmt| %>
+    <% Book::FORMATS.each do |frmt| %>
       <% next unless item[frmt] %>
       <% frmt = 'папір' if frmt == 'paper' %>
       <span class="label label-warning"><%=frmt%></span>
