admin create book

--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -1,7 +1,8 @@
 
 <h2>admin</h2>
-<a href="/admin/articles">Blog</a><br/>
-<a href="/admin/lists">Lists</a><br/>
+<a href="/admin/articles">Articles</a><br/>
+<a href="/admin/authors">Authors</a><br/>
 <a href="/admin/books">Books</a><br/>
+<a href="/admin/lists">Lists</a><br/>
 <a href="/admin/quotes">Quotes</a>
 
